Add icon for mobile homescreens

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="shortcut icon" href="<%= webpackConfig.output.publicPath %>hammond.png" />
+    <link rel="apple-touch-icon" href="<%= webpackConfig.output.publicPath %>touch-icon.png" />
     <title><%= webpackConfig.name %></title>
   </head>
   <body>
